--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,17 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#4e8ef7">
-
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+
+  <script src="assets/js/MockCordova.js"></script>
+  <script src="assets/js/codeflow-emulator.js"></script>
+
+  <script type="text/javascript">
+    window.DEVICE_APP_NAME = 'BIZ002';
+    window.SF_LOGIN_URL    = 'https://login.salesforce.com';
+  </script>
 
   <!-- un-comment this code to enable service worker
   <script>
